--- a/custom.css
+++ b/custom.css
@@ -85,3 +85,39 @@ transition: 0.5s;
   -moz-box-shadow: 0px 5px 13px 3px rgba(0,0,0,0.53);
   transition: 0.5s;
 }
+
+.letter{
+  width: 100%;
+  text-align: center;
+  animation: gradient 2.4s ease-in-out;
+  letter-spacing: 10px;
+  white-space: nowrap;
+  font-size: 20px;
+  text-indent: 10px;    
+}
+
+
+
+
+
+.a01{ 
+  animation-delay: 0.1s;
+}
+@keyframes gradient{
+  0%{
+    letter-spacing: 50px;
+    text-indent: 50px;    
+  }
+  
+  80%{
+    letter-spacing: 10px;
+    text-indent: 10px;    
+  }
+ 
+  
+  100%{
+    letter-spacing: 10px;
+    text-indent: 10px;    
+  }
+  
+}
