--- a/custom.css
+++ b/custom.css
@@ -87,8 +87,7 @@ transition: 0.5s;
 }
 
 .letter{
-  animation: gradient 2.4s ease-in-out;
-  white-space: nowrap;    
+  animation: gradient 2.4s ease-in-out;    
 }
 
 
@@ -97,6 +96,8 @@ transition: 0.5s;
 
 .a01{ 
   animation-delay: 0.1s;
+      letter-spacing:0px;
+    text-indent:0px;
 }
 @keyframes gradient{
   0%{
@@ -110,7 +111,9 @@ transition: 0.5s;
   }
  
   
-  100%{    
+  100%{
+    letter-spacing:0px;
+    text-indent:0px;
   }
   
 }
