--- a/custom.css
+++ b/custom.css
@@ -87,7 +87,8 @@ transition: 0.5s;
 }
 
 .letter{
-  animation: gradient 2.4s ease-in-out;    
+  animation: gradient 2.4s ease-in-out;
+  white-space: nowrap;
 }
 
 
@@ -106,14 +107,14 @@ transition: 0.5s;
   }
   
   80%{
-    letter-spacing: 10px;
-    text-indent: 10px;    
+    letter-spacing: 0px;
+    text-indent: 0px;    
   }
  
   
   100%{
-    letter-spacing:0px;
-    text-indent:0px;
+    letter-spacing: 0px;
+    text-indent: 0px;    
   }
   
 }
